Implements flex, lexers and types